correcting accordion spacing

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -63,7 +63,7 @@
   }
   .faq__description {
     font-family: "Roboto Mono",sans-serif;
-    padding-right: 10rem;
+    padding: 1.5em 10em 1.5em 0;
   }
   .challenges__cards {
     display: grid;
